<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mcguinness.mindread.MathActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math_welcome"
        android:id="@+id/mathWelcomeMessage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warningText"
        android:id="@+id/warning"
        android:layout_below="@id/mathWelcomeMessage"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/numberInput"
        android:layout_below="@+id/mathWelcomeMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:id="@+id/mathButton"
        android:onClick="calculateNumber"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/finalNumber"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/infoText"
        android:layout_marginBottom="90dp"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalNum"
        android:id="@+id/infoText"
        android:layout_below="@+id/mathButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:id="@+id/rememberText"
        android:layout_below="@+id/finalNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"/>
</RelativeLayout>
